--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+  <!-- Tailwind Plug -->
+  <link rel="stylesheet" href="https://cdn.tailgrids.com/tailgrids-fallback.css" />
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
